# femr

./: .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  fix_zepengs_labels.py  fixed_labels.csv  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  pytest.yml  tests.yaml
demo/: script.py
doc_src/logs/: logfile.log.REMOVED.git-id
doc_src/source/: clmbr.rst  conf.py  extract_tutorial.rst  featurizer.rst  index.rst  labeler.rst  m-index.rst  ontology.rst  setup.rst  timeline.rst  tutorial.rst  utils.rst
native/: .bazelrc  .clang-tidy  BUILD  WORKSPACE  backupbazelrc  civil_day_caster.h  civil_day_caster.hh  clmbr_dictionary.hh  clmbr_extension.cpp  clmbr_extension.h  common_jax_extension.hh  compute_dictionary.cc  compute_predictions.py  compute_representations.py  compute_statistics.cc  compute_survival_dictionary.cc  concept.h  constdb.cc  constdb.cpp  constdb.h  constdb.hh  convert_dictionary.py  convert_dictionary_formats.cc  count_codes_and_values.cc  count_codes_and_values.hh  count_codes_and_values_test.cc  counts  cpu_jax_extension.cc  create_dictionary.cc  create_dictionary.hh  create_index.cpp  create_survival_dictionary.cc  create_survival_dictionary.hh  csv.cc  csv.h  csv.hh  csv_test.cc  database.cc  database.hh  database_test.cc  (+85 more)
piton/: timeline.py  utils.py
piton/extension/: timeline.pyi
piton/fileio/: __init__.py
src/femr/: __init__.py  _version.py  etl.py  hf_utils.py  index.py  jax.py  model_utils.py  mr.py  ontology.py  pat_utils.py  splits.py  stat_utils.py
src/femr/datasets/: __init__.py  fileio.py  types.py
src/femr/etl_pipelines/: esds.py  mimic.py  omop.py  sickkids.py  simple.py  stanford.py
src/femr/extension/: datasets.pyi  jax.pyi
src/femr/extractors/: __init__.py  csv.py  omop.py
src/femr/featurizers/: __init__.py  core.py  featurizers.py  featurizers_notes.py  utils.py
src/femr/labelers/: __init__.py  core.py  (+8 more)
src/piton/: __init__.py  jax.py  utils.py
tests/: femr_test_tools.py  test_OnlineStatistics.py  test_conjugate_gradient.py  test_csvs.py  test_datasets.py  test_featurizer.py  test_featurizers.py  test_jax.py  test_labeler.py  test_labelers.py  test_labelers_CodeLabeler.py  test_labelers_InpatientAdmissionLabelers.py  test_labelers_LabeledPatients.py  test_labelers_LupusCodeLabeler.py  test_labelers_MortalityCodeLabeler.py  test_labelers_OMOPConceptCodeLabeler.py  test_labelers_OMOPConceptCodeLabelerpy  test_labelers_OMOPConceptOutcomeFromLabValueLabeler.py  test_labelers_OMOPLabValueLabelers.py  test_labelers_OpioidOverdoseLabeler.py  test_linear_probe.py  test_metrics.py  test_omop_converter.py  test_ontology.py  test_root.py  test_streaming_merge.py  test_transforms.py  test_utils.py  tools.py
tests/featurizers/: test_OnlineStatistics.py  test_featurizers.py
tests/labelers/: test_CodeLabelers.py  test_InpatientAdmissionLabelers.py  test_LabValueLabelers.py  test_LabeledPatients.py  test_Mimic3Benchmarks.py  test_NLabelerPerPatient.py  test_OMOPConceptCodeLabeler.py  test_OMOPLabValueLabelers.py  test_OpioidOverdoseLabeler.py  test_TimeHorizonEventLabeler.py
tests/models/: test_batch_creator.py  test_survival_calculator.py
tools/generic/: convert_to_zstandard.py
tools/mimic_omop/: fix_omop_tables.py
tools/omop/: normalize_visit_detail.py
tools/stanford/: custom_concept_cleaner.py  download_bigquery.py  fix_source_concept_id.py  flowsheet_cleaner.py
tutorials/: 0. How Piton Works + Toy Example.ipynb  0_Fundamental FEMR Schema, Patients And Events.ipynb  0_How FEMR Works + Toy Example.ipynb  1. Loading EHR Data with Piton.ipynb  1. Loading STARR OMOP with Piton.ipynb  1_Loading_Data.ipynb  1_Ontology.ipynb  1_Overview.ipynb  1_Run FEMR Featurizers.ipynb  1_data_extraction.ipynb  1_run_featurizers.py  2_1_baseline_model_training.ipynb  2_1_baseline_model_training.py  2_1_baseline_model_training_scratch.py  2_Labeling.ipynb  2_Labeling_and_Adding_Features.ipynb  2_baseline_model_training.ipynb  2_baseline_model_training.py  2_train_baseline_model.py  2_train_baseline_models.py  2a_OMOP_ETL.ipynb  2b_ESDS_ETL.ipynb  2b_Simple_ETL.ipynb  2c_Simple_ETL.ipynb  3_1_run_text_featurizer.py  3_2_generate_embeddings.py  3_2_generate_embeddings.sh  3_Count Featurization And Modeling.ipynb  3_Labeling.ipynb  3_Using_CLMBR.ipynb  3_run_text_featurizer.py  4_Count Featurization And Modeling.ipynb  4_Train CLMBR.ipynb  4_Train MOTOR.ipynb  4_baseline_models_with_text_embeddings.py  4_train_clmbr_model.py  5_CLMBR Featurization And Modeling.ipynb  5_CLMBR Featurization And Modeling_INSPECT.ipynb  5_CLMBR Featurization And Modeling_INSPECT.py  5_MOTOR Featurization And Modeling.ipynb  (+52 more)
tutorials/.ipynb_checkpoints/: simple_example_dataset-checkpoint.ipynb  simple_femr_format_tutorial-checkpoint.ipynb
tutorials/advanced_tutorials/: 1_run_featurizers.py  2_train_baseline_models.py  4_train_clmbr_model.py  FEMR_ETL_Internals.ipynb
tutorials/example_data/: dictionary
tutorials/input/: dictionary  dictionary.REMOVED.git-id  labels.csv  labels.parquet  labels.pkl  ontology.pkl
tutorials/reference/: FEMR_ETL_Internals.ipynb  FEMR_Simple_ETL.ipynb
tutorials/synthetic_data_generation/: generate_omop.py  generate_patients.py  generate_simple_femr.py
(+145 files in other folders)
