[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "femr"
description = "Framework for Electronic Medical Records. A python package for building models using EHR data."
readme = "README.md"
dependencies = [
    "numpy >= 1.22",
    "scipy >= 1.6",
    "scikit-learn >= 0.24",
    "tqdm >= 4.60.0",
    "zstandard >= 0.18",
    "icecream == 2.1.3",
    "nptyping == 2.4.1",
    "msgpack >= 1.0.5",
]
requires-python=">3.9"
version = "0.1.9"

[project.scripts]

etl_stanford_omop = "femr.etl_pipelines.stanford:etl_starr_omop_program"
etl_generic_omop = "femr.etl_pipelines.omop:etl_generic_omop_program"
etl_simple_femr = "femr.etl_pipelines.simple:etl_simple_femr_program"
etl_sickkids_omop = "femr.etl_pipelines.sickkids:etl_sk_omop_program"
clmbr_create_batches = "femr.models.dataloader:create_batches"
clmbr_create_dictionary = "femr.models.scripts:create_dictionary"
clmbr_create_survival_dictionary = "femr.models.scripts:create_survival_dictionary"
clmbr_train_model = "femr.models.scripts:train_model"
clmbr_compute_representations = "femr.models.scripts:compute_representations"
clmbr_train_linear_probe= "femr.models.linear_probe:train_linear_probe"

[project.optional-dependencies]
build = [
    "pytest >= 5.2",
    "flake8-future-import >= 0.4.6",
    "black >= 19.10b0",
    "isort >= 5.3.2",
    "mypy >= 0.782",
    "flake8 >= 3.8.3",
    "sphinx >= 3.2.1",
    "sphinx-rtd-theme >= 0.5.0",
    "sphinx-autoapi >= 1.5.1",
    "torchtyping == 0.1.4",
    "transformers == 4.25.1",
]
models = [
   "optax == 0.1.4",
   "dm-haiku == 0.0.9",
   "jax == 0.4.8",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']

[tool.pydocstyle]
match = "src/.*\\.py"
