[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "femr"
description = "Framework for Electronic Medical Records. A python package for building models using EHR data."
readme = "README.md"
dependencies = [
    "numpy >= 1.22",
    "scipy >= 1.6",
    "scikit-learn >= 0.24",
    "tqdm >= 4.60.0",
    "zstandard >= 0.18",
    "icecream == 2.1.3",
    "nptyping == 2.4.1",
    "msgpack >= 1.0.5",
    "meds == 0.1.0",
]
requires-python=">3.9"
version = "0.2.1"

[project.scripts]

femr_stanford_omop_fixer = "femr.post_etl_pipelines.stanford:femr_stanford_omop_fixer_program"
etl_stanford_omop = "femr.etl_pipelines.stanford:etl_starr_omop_program"
etl_generic_omop = "femr.etl_pipelines.omop:etl_generic_omop_program"
etl_simple_femr = "femr.etl_pipelines.simple:etl_simple_femr_program"
etl_sickkids_omop = "femr.etl_pipelines.sickkids:etl_sk_omop_program"
etl_mimic_omop = "femr.etl_pipelines.mimic:etl_mimic_omop_program"

[project.optional-dependencies]
build = [
    "pytest >= 5.2",
    "flake8-future-import >= 0.4.6",
    "black >= 19.10b0",
    "isort >= 5.3.2",
    "mypy >= 0.782",
    "flake8 >= 3.8.3",
    "sphinx >= 3.2.1",
    "sphinx-rtd-theme >= 0.5.0",
    "sphinx-autoapi >= 1.5.1",
    "torchtyping == 0.1.4",
]
models = [
    "torch",
    "transformers >= 4.25.1",
    "flash_attn >= 2.3.6",
    "datasets >= 2.15.0",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']

[tool.pydocstyle]
match = "src/.*\\.py"


[tool.pytest.ini_options]
pythonpath = [
    "tests"
]
