[build-system]
requires = ["setuptools >= 69.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "femr"
description = "Framework for Electronic Medical Records. A python package for building models using EHR data."
readme = "README.md"
dependencies = [
    "numpy >= 1.22",
    "scipy >= 1.6",
    "scikit-learn >= 0.24",
    "tqdm >= 4.60.0",
    "zstandard >= 0.18",
    "icecream == 2.1.3",
    "nptyping == 2.4.1",
    "msgpack >= 1.0.5",
    "meds == 0.1.3",
    "meds_etl == 0.0.1",
    "torch >= 2.1.2",
    "transformers >= 4.25",
    "datasets >= 2.15",
    "polars >= 0.20",
    "dill >= 0.3.7",
]
requires-python=">3.9"
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/femr/_version.py"

[project.scripts]

femr_stanford_omop_fixer = "femr.post_etl_pipelines.stanford:femr_stanford_omop_fixer_program"

[project.optional-dependencies]
build = [
    "pytest >= 5.2",
    "flake8-future-import >= 0.4.6",
    "black >= 19.10b0",
    "isort >= 5.3.2",
    "mypy >= 0.782",
    "flake8 >= 3.8.3",
    "sphinx >= 3.2.1",
    "sphinx-rtd-theme >= 0.5.0",
    "sphinx-autoapi >= 1.5.1",
    "torchtyping == 0.1.4",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']

[tool.pydocstyle]
match = "src/.*\\.py"


[tool.pytest.ini_options]
pythonpath = [
    "tests"
]
